# socio

./: .gitignore  Cargo.toml  docker-compose.yaml  justfile  package.json
backend/: Cargo.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  style.css
frontend/src/components/Chat/: Header.tsx  Input.tsx
monitoring/: docker-compose.yaml  justfile
services/auth/: Cargo.toml  Config.toml
services/auth/src/: config.rs  helper.rs  lib.rs  main.rs  state.rs
services/auth/src/api/: login.rs  mod.rs  refresh.rs  sign.rs
services/auth/src/mocks/: user_storage.rs
services/auth/src/token/: claims.rs  issuer.rs  mod.rs  verifier.rs
services/auth/src/users/: mod.rs  user.rs  user_storage.rs
services/chatroom/: Cargo.toml  Config.toml  Dockerfile
services/chatroom/src/: lib.rs  main.rs  requests.rs
services/chatroom/src/api/: mod.rs  state.rs
services/chatroom/src/api/ws/: entrypoint.rs  error.rs  income.rs  io.rs  mod.rs  notifier.rs  room_interface.rs  status_codes.rs  staus_codes.rs  types.rs
services/chatroom/src/application/: mod.rs  rooms.rs
services/chatroom/src/application/mocks/: mock_rooms.rs  mod.rs
services/chatroom/src/domain/: identifiable.rs  message.rs  mod.rs  room.rs  user.rs
services/chatroom/src/helper/: mod.rs
services/chatroom/src/room/: message.rs  mod.rs  realtime_rooms.rs  room.rs  rooms.rs
services/chatroom/src/user/: user.rs
