[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
axum-limit = "0.1.0-alpha.2"
chrono = "0.4.45"
jsonwebtoken = { version = "10.4.0", features = ["ed25519-dalek", "rust_crypto"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v7", "serde"] }
zeroize = "1.9.0"
