[package]
name = "chatroom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros", "ws"] }
dashmap = "6.2.1"
futures = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["ed25519-dalek"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
uuid = { version = "1.23.3", features = ["v7", "serde"] }
